fix the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ header span.material-icons {
   font-size: 2.7em;
   display: flex;
   flex-direction: row;
-  margin-top: .8em;
+  margin-top: 0;
 }
 
 header a:link {
@@ -130,6 +130,7 @@ ul {
 
 header img {
   max-width: 100px;
+  padding-left: 2em
 }
 
 nav ul {
@@ -348,7 +349,6 @@ background-color: #CAE8E6;
   align-items: flex-start;
   flex-direction: row;
   justify-content: center;
-  max-height: 100vh;
   margin-bottom: 0;
 }
 
@@ -369,7 +369,6 @@ background-color: #A3D7D3;
   align-items: flex-start;
   flex-direction: row;
   justify-content: center;
-  max-height: 100vh;
   margin-bottom: 0;
 }
 
@@ -378,6 +377,7 @@ background-color: #A3D7D3;
   align-items: center;
   flex-direction: column;
 }
+
 .ff img {
   margin: 10px;
   margin-bottom: 0;
@@ -469,9 +469,9 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 10vh;
   padding: 0 1.5em;
 }
+
 footer ul {
   display: flex;
   align-items: center;
@@ -481,7 +481,6 @@ footer ul {
 footer ul a {
   padding: .2em;
 }
-
 
 .ff p {
   font-family: "Fredoka";
@@ -531,6 +530,11 @@ box-shadow: 0px 8px 0px #BC5B84;
 
 .sup {
   color: #000;
+  padding: 0;
+}
+
+.social {
+  padding: 0;
 }
 
 .fa-facebook {
@@ -586,4 +590,75 @@ box-shadow: 0px 8px 0px #BC5B84;
   nav {
     display: block;
   }
+
+}
+
+@media screen and (max-width: 450px) {
+
+  header span.material-icons {
+  font-size: 2em;
+  display: flex;
+  flex-direction: row;
+  margin-top: 0;
+  }
+
+  footer {
+    background: #F6FF90;
+    display: flex;
+    flex-direction: column;
+  }
+
+  footer ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .ffs {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 0;
+    padding: 0;
+    padding-left: 4em;
+  }
+
+  .ff {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .ff img {
+    margin: 10px;
+    margin-bottom: 0;
+    min-width: 50vw;
+    min-height: 50vw;
+    border-radius: 100%;
+    border-color: #fff;
+    border-width: thick;
+    border-style: solid;
+  }
+
+  .coming {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+
+  .coms {
+    padding: 0;
+  }
+
+  .com img {
+    justify-content: center;
+    width: 14rem;
+    max-width: none;
+    max-height: none;
+  }
+
+  .text {
+    max-width: 23em;
+  }
+
 }
